All data inserted

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "Asus",
     "Hisense",
+    "Inspiron",
     "matepad",
     "mediapad",
     "OLED",
-    "Realme"
+    "Realme",
+    "Redmi"
   ]
 }
